--- a/components/header/admin/Menu.module.scss
+++ b/components/header/admin/Menu.module.scss
@@ -156,11 +156,11 @@
   position: fixed;
 
   left: 0;
-  opacity: 0.5;
+  opacity: 0.3;
   display: flex;
   height: 100vh;
   align-items: center;
-  background-color: gray;
+  background-color: #2a9de9;
   z-index: 1000;
   width: 2em;
   cursor: pointer;
@@ -173,15 +173,15 @@
 }
 
 .tooltiptext {
-  width: 120px;
-  background-color: black;
-  color: #fff;
+  width: 100%;
+  background-color: #2a9de9;
+  color: black;
   text-align: center;
   border-radius: 6px;
   visibility: hidden;
   /* Position the tooltip */
   position: absolute;
-
+  margin-left: 0.2em;
   padding: 0 0.5em;
   z-index: 1;
 }
