--- a/components/eveniment/ContainerEveniment.module.scss
+++ b/components/eveniment/ContainerEveniment.module.scss
@@ -12,6 +12,7 @@
   -webkit-backdrop-filter: blur(17px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
+  color: black;
 
   hr {
     width: 70%;
