--- a/components/header/user/Header.module.scss
+++ b/components/header/user/Header.module.scss
@@ -113,25 +113,27 @@
 .navLinks {
   background: rgba(255, 255, 255, 0.15);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(125px);
-  -webkit-backdrop-filter: blur(125px);
+  backdrop-filter: blur(25px);
+  -webkit-backdrop-filter: blur(25px);
   border-top-left-radius: 5%;
   border-bottom-left-radius: 5%;
   padding: 1em;
   font-size: 1em;
   height: 15em;
+  z-index: 10000;
 }
 .dashLinks {
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.15);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(125px);
-  -webkit-backdrop-filter: blur(125px);
+  backdrop-filter: blur(25px);
+  -webkit-backdrop-filter: blur(25px);
 
   border-top-right-radius: 5%;
   border-bottom-right-radius: 5%;
   padding: 1em;
   height: 15em;
   font-size: 1em;
+  z-index: 10000;
 }
 @media (max-width: 768px) {
   .headerContainer {
@@ -199,5 +201,11 @@
         }
       }
     }
+  }
+  .navLinks {
+    border-radius: unset;
+  }
+  .dashLinks {
+    border-radius: unset;
   }
 }
