--- a/pages/dashboard/admin/organizati-traseul/organizare.module.scss
+++ b/pages/dashboard/admin/organizati-traseul/organizare.module.scss
@@ -21,7 +21,7 @@
   justify-content: space-between;
   padding: 0.5em;
   border-bottom: 5px dotted black;
-  height: 20em;
+  height: auto;
 }
 
 @media (max-width: 768px) {
