--- a/pages/dashboard/admin/program/ProgramAzi.module.scss
+++ b/pages/dashboard/admin/program/ProgramAzi.module.scss
@@ -33,10 +33,27 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
   color: #202124;
 }
 .selectDate {
-  width: 10em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  button {
+    padding: 1em;
+    background-color: transparent;
+    opacity: 0.7;
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    border: #202124;
+
+    cursor: pointer;
+    &:hover {
+      background-color: aqua;
+      opacity: 1;
+    }
+  }
 }
 .cuTitle {
   display: flex;
