--- a/components/formular/eveniment/Eveniment.module.scss
+++ b/components/formular/eveniment/Eveniment.module.scss
@@ -4,7 +4,6 @@
   gap: 1em;
   width: 100%;
   margin-top: 2em;
-  height: 20em;
 }
 
 .randFormular {
@@ -118,6 +117,7 @@
 @media (max-width: 768px) {
   .dateEveniment {
     grid-template-columns: 1fr;
+    gap: 3em;
   }
   .inp {
     input {
