--- a/components/header/admin/Menu.module.scss
+++ b/components/header/admin/Menu.module.scss
@@ -10,7 +10,6 @@
   background: #151515;
   text-align: center;
   width: 22em;
-  height: 100vh;
   z-index: 1000;
 
   hr {
@@ -156,9 +155,11 @@
   position: fixed;
 
   left: 0;
+  top: 0;
+  bottom: 0;
   opacity: 0.8;
   display: flex;
-  height: 100vh;
+
   align-items: center;
   background-color: #2a9de9;
   z-index: 1000;
